# Slit_Lamp_Vision

./: .gitignore  README.md  pyproject.toml
Context/: phase-1-summary.md
Documentation/: Design Document - Housing.docx  Project Plan_v2.docx  Project Plan_v3.docx  deploy.md  dev-setup.md  phase-1-bringup.md  pi-setup.md  workflow.md
Documentation/phases/: phase-1.md
Documentation/scripts/: extract_project_plan_text.py
freecad/: README.md  slit_lamp_housing.py
requirements/: dev.txt  pi.txt
scripts/: deploy_rsync.sh  pi_bootstrap.sh  pi_setup.sh  pi_uninstall.sh  pi_update.sh  slitcam-recorder.service  usb-automount.rules  usb-mount.sh  usb-mount@.service
src/slit_lamp_camera/: camera.py  cli.py  gpio_io.py  recorder.py  storage.py
src/slit_lamp_camera.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
