[project]
name = "slit-lamp-camera"
version = "0.1.0"
description = "Headless slit lamp camera recorder (Raspberry Pi Zero 2 W)"
readme = "README.md"
requires-python = ">=3.11"

# Runtime deps are intentionally minimal; prefer apt packages on the Pi.
dependencies = []

[project.scripts]
slitcam = "slit_lamp_camera.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
